compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assert__assert_with_logical_and_binary_rhs_3.snap
---
source: compiler-core/src/javascript/tests/assert.rs
expression: "\npub fn main() {\n    assert True && \"foo\" != \"bar\"\n}\n"
---
----- SOURCE CODE

pub fn main() {
    assert True && "foo" != "bar"
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  if (true) {
    if (!("foo" !== "bar")) {
      throw makeError(
        "assert",
        FILEPATH,
        "my/mod",
        3,
        "main",
        "Assertion failed.",
        {
          kind: "binary_operator",
          operator: "&&",
          left: { kind: "literal", value: true, start: 28, end: 32 },
          right: { kind: "expression", value: false, start: 36, end: 50 },
          start: 21,
          end: 50,
          expression_start: 28
        }
      )
    }
  } else {
    throw makeError(
      "assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Assertion failed.",
      {
        kind: "binary_operator",
        operator: "&&",
        left: { kind: "literal", value: false, start: 28, end: 32 },
        right: { kind: "unevaluated", start: 36, end: 50 },
        start: 21,
        end: 50,
        expression_start: 28
      }
    )
  }
  return undefined;
}
