compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assert__assert_with_logical_on_right.snap
---
source: compiler-core/src/javascript/tests/assert.rs
expression: "\npub fn main() {\n  assert True && 3 < 4\n}\n"
---
----- SOURCE CODE

pub fn main() {
  assert True && 3 < 4
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  if (true) {
    if (!(3 < 4)) {
      throw makeError(
        "assert",
        FILEPATH,
        "my/mod",
        3,
        "main",
        "Assertion failed.",
        {
          kind: "binary_operator",
          operator: "&&",
          left: { kind: "literal", value: true, start: 26, end: 30 },
          right: { kind: "expression", value: false, start: 34, end: 39 },
          start: 19,
          end: 39,
          expression_start: 26
        }
      )
    }
  } else {
    throw makeError(
      "assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Assertion failed.",
      {
        kind: "binary_operator",
        operator: "&&",
        left: { kind: "literal", value: false, start: 26, end: 30 },
        right: { kind: "unevaluated", start: 34, end: 39 },
        start: 19,
        end: 39,
        expression_start: 26
      }
    )
  }
  return undefined;
}
