compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assert__assert_with_negated_case_rhs.snap
---
source: compiler-core/src/javascript/tests/assert.rs
expression: "\npub fn main() {\n    assert True && !case 3 - 2 {\n        1 -> True\n        _ -> False\n    }\n}\n"
---
----- SOURCE CODE

pub fn main() {
    assert True && !case 3 - 2 {
        1 -> True
        _ -> False
    }
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  if (true) {
    if ((() => {
        let $ = 3 - 2;
        if ($ === 1) {
          return true;
        } else {
          return false;
        }
      })()) {
      throw makeError(
        "assert",
        FILEPATH,
        "my/mod",
        3,
        "main",
        "Assertion failed.",
        {
          kind: "binary_operator",
          operator: "&&",
          left: { kind: "literal", value: true, start: 28, end: 32 },
          right: { kind: "expression", value: false, start: 36, end: 92 },
          start: 21,
          end: 92,
          expression_start: 28
        }
      )
    }
  } else {
    throw makeError(
      "assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Assertion failed.",
      {
        kind: "binary_operator",
        operator: "&&",
        left: { kind: "literal", value: false, start: 28, end: 32 },
        right: { kind: "unevaluated", start: 36, end: 92 },
        start: 21,
        end: 92,
        expression_start: 28
      }
    )
  }
  return undefined;
}
